--- a/app/index.html
+++ b/app/index.html
@@ -9,15 +9,15 @@
     <title>Healthy Planet Partners</title>
     <script>document.write('<base href="' + document.location + '" />');</script>
     <link rel="shortcut icon" href="favicon.ico">
-    <link rel="stylesheet" href="css/app.css"/>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
-    <script src="http://code.angularjs.org/1.1.5/angular.js"></script>
-    <script type="text/javascript" src="http://www.google.com/jsapi?ext.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"></script>
+    <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.4.0.js"></script>
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/filters.js"></script>
     <script src="js/directives.js"></script>
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/app.css"/>
   </head>
 
   <body>
