Remove routing hash

--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
 <html lang="en" ng-app="myApp">
   <head lang="en">
     <meta charset="utf-8">
+    <base href="/index.html">
     <meta name="description" content="Healthy Planet Partners - Sustainable Power Finance">
     <meta name="author" content="Healthy Planet Partners">
     <meta name="keywords" content="Solar, Finance, Environment">
@@ -18,6 +19,7 @@
     <script src="js/directives.js"></script>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/app.css"/>
+
   </head>
 
   <body>
